--- a/c/anagram/makefile
+++ b/c/anagram/makefile
@@ -14,3 +14,5 @@ clean:
 tests.out: test/test_anagram.c src/anagram.c src/anagram.h
 	@echo Compiling $@
 	@cc $(CFLAGS) src/anagram.c test/vendor/unity.c test/test_anagram.c -o tests.out
+
+run:
