--- a/c/anagram/makefile
+++ b/c/anagram/makefile
@@ -16,3 +16,5 @@ tests.out: test/test_anagram.c src/anagram.c src/anagram.h
 	@cc $(CFLAGS) src/anagram.c test/vendor/unity.c test/test_anagram.c -o tests.out
 
 run:
+	@cc $(CFLAGS) src/anagram.c -o anagram.out
+	@./anagram.out
